--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,31 +7,17 @@
 
 		{{!-- BOOTSTRAP --}}
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    
 
 		<!-- Material Design Bootstrap -->
     	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/signup.css"/>
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     	
-		{{!-- jquery script --}}
-    	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    	<script type="text/javascript" src="/assets/js/pagefunc.js"></script>
-
-    	 <!-- MDB core JavaScript -->
-    	<script type="text/javascript" href="/node_modules/mdbootstrap/js/mdb.min.js"></script>
-
-    	{{!-- AWESOME COMPLETE JavaScript --}}
-    	<script src="/js/awesomplete.js"></script>
-
-    	{{!-- AWESOME COMPLETE CSS --}}
-    	<link rel="stylesheet" type="text/css" href="/css/awesomplete.css"/>
-
-    	<!--Chart.js-->
-    	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
-
+  
 		<title>Money Chirp</title>
 	</head>
 	<body>
@@ -97,4 +83,16 @@
 	</div>
 
 </body>
+
+{{!-- JAVASCRIPT  --}}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script type="text/javascript" src="/assets/js/pagefunc.js" async></script>
+<script type="text/javascript" href="/node_modules/mdbootstrap/js/mdb.min.js"></script>
+
+
+
 </html>
