--- a/views/following.handlebars
+++ b/views/following.handlebars
@@ -1,5 +1,7 @@
-<link rel="stylesheet" type="text/css" href="/assets/css/awesomplete.css"/>
+<head>
+  <link rel="stylesheet" type="text/css" href="/assets/css/awesomplete.css"/>
 <link rel="stylesheet" type="text/css" href="/assets/css/news.css"/>
+</head>
 
 <br><br>
     <div class="jumbotron">
@@ -97,8 +99,8 @@
           </div>
     </div>
 
-
 <script src="/assets/js/NewsAPI.js" async></script>
 <script src="/assets/js/awesomplete.js" async></script>
 <script src="/assets/js/dataList.js" async></script>
+
    
