--- a/views/heatmap.handlebars
+++ b/views/heatmap.handlebars
@@ -1,6 +1,9 @@
+<head>
 <link rel="stylesheet" type="text/css" href="/assets/css/heatmap.css"/>
 <script src="/assets/js/heatmap.js" async></script>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:700,300' rel='stylesheet'>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+</head>
+
 
 <br><br>
     <div class="jumbotron">
@@ -81,7 +84,3 @@
 
 <canvas id="myChart" tyle="width:350px; height:200px"></canvas>
 
-<!-- Chart.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
