--- a/views/following.handlebars
+++ b/views/following.handlebars
@@ -1,7 +1,5 @@
-<head>
-  <link rel="stylesheet" type="text/css" href="/assets/css/awesomplete.css"/>
+{{!-- <link rel="stylesheet" type="text/css" href="/assets/css/awesomplete.css"/> --}}
 <link rel="stylesheet" type="text/css" href="/assets/css/news.css"/>
-</head>
 
 <br><br>
     <div class="jumbotron">
@@ -99,8 +97,8 @@
           </div>
     </div>
 
-<script src="/assets/js/NewsAPI.js" async></script>
-<script src="/assets/js/awesomplete.js" async></script>
-<script src="/assets/js/dataList.js" async></script>
 
+<script src="/assets/js/NewsAPI.js"></script>
+{{!-- <script src="/assets/js/awesomplete.js"></script> --}}
+<script src="/assets/js/dataList.js"></script>
    
