--- a/public/assets/css/heatmap.css
+++ b/public/assets/css/heatmap.css
@@ -16,6 +16,16 @@
 	transform: translate(-50%, -50%);
 }*/
 
+.style {
+	font-weight: bold;
+	padding:35px;
+	margin: 5px;
+}
+
+.stock:hover {
+	box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.15);
+	}
+
 .stock {
 	width: 150px;
 	height: 150px;
@@ -24,9 +34,7 @@
 	float: left;
 	margin: 5px;
 	transition: box-shadow 0.2s ease;
-	&:hover {
-		//box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.15);
-	}
+}
 	.symbol, .change {
 		position: absolute;
 		left: 0;
@@ -37,7 +45,7 @@
 	.symbol {
 		top: 10px;
 		text-transform: uppercase;
-		font-size: 12px;
+		font-size: 18px;
 		font-weight: 300;
 	}
 	.change {
