--- a/views/aboutUs.handlebars
+++ b/views/aboutUs.handlebars
@@ -1,5 +1,8 @@
 <head>
-	<link rel="stylesheet" type="text/css" href="/assets/css/aboutUs.css"/>
+    	<link rel="stylesheet" type="text/css" href="/assets/css/aboutUs.css"/>
+    	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 
 <div class="row">
@@ -28,12 +31,10 @@
 
   </center>
 
-	<ul> 
-		<li> Joy Chia-Yu Chang  <a href="https://github.com/chiaychang">Github</a> </li> 
-		<li> Adrian J. Segura <a href="https://github.com/adi727">Github</a> </li>
-		<li> Sarah Mandley <a href="https://github.com/saerieanna">Github</a> </li>
-		<li> Ornella Hernandez <a href="https://github.com/ornibella">Github</a> </li>
-		<li> Andreas Papazafeiropoulos <a href="https://github.com/AndreasPapaz">Github</a> </li>
-	</ul>
+		<h6>Joy Chia-Yu Chang <a href="https://github.com/chiaychang">Github</a></h6> 
+		<h6>Adrian J. Segura <a href="https://github.com/adi727">Github</a></h6>
+		<h6>Sarah Mandley <a href="https://github.com/saerieanna">Github</a></h6>
+		<h6>Ornella Hernandez <a href="https://github.com/ornibella">Github</a></h6>
+		<h6>Andreas Papazafeiropoulos <a href="https://github.com/AndreasPapaz">Github</a></h6>
   
 </div>
